# rs-cde

./: .gitignore  README.md
client/: Cargo.toml
client/src/: cn_cidr.rs  geo_check.rs  license_guard.rs  main.rs  network.rs  storage.rs  time_guard.rs
server/: .gitignore  Cargo.toml  test.sh  test_full.sh  v2_test.sh
server/src/: auth.rs  cache.rs  db.rs  handlers.rs  key_cache.rs  main.rs  nonce_fallback.rs
