[package]
name = "tester"
version = "0.2.0"
edition = "2024"

[dependencies]
# AES-128-GCM 认证加密
aes-gcm = { version = "0.10", features = ["aes"] }
sha2    = "0.10"
rand    = "0.8"
hmac     = "0.12"
# 方案 D 额外使用 aes-gcm 内置的 OsRng，无需额外依赖
# 编译期字符串混淆（防逆向找 SALT）
obfstr   = "0.4"
# 轻量级同步 HTTP 客户端（零 async 依赖）
ureq     = { version = "2.9", features = ["json", "tls"] }
serde    = { version = "1",   features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端（默认使用 rustls，避免 OpenSSL 系统依赖）
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",   # TLS 使用 rustls（纯 Rust，无系统依赖）
    "json",         # serde_json 反序列化支持
    "gzip",         # 自动处理 gzip 压缩响应
] }

# 获取本机网络接口 IP 列表
local-ip-address = "0.6"

# 错误处理（可选，使代码更简洁）
anyhow = "1"
tracing = "0.1.44"

[profile.release]
opt-level = 3
strip     = "symbols"
lto       = true
codegen-units = 1 
# panic         = "abort"  # panic 直接终止（减小二进制体积）