[package]
name = "tester"
version = "0.2.0"
edition = "2024"

[dependencies]
# AES-128-GCM 认证加密（BUG-07 FIX: 使用 OsRng 生成随机 nonce）
aes-gcm = { version = "0.10", features = ["aes"] }
sha2 = "0.10"
hmac = "0.12"


# 编译期字符串混淆（防逆向找 SALT）
obfstr = "0.4"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时（BUG-06 FIX: verify_online 改为 async fn）
tokio = { version = "1", features = ["full"] }

# HTTP 客户端（BUG-J FIX: 全局单例，连接池复用）
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls", # TLS 使用 rustls（纯 Rust，无系统依赖）
    "json",
    "gzip",
] }

# 地理检测
local-ip-address = "0.6"

# 错误处理 & 追踪
anyhow = "1"
tracing = "0.1"

async-recursion = "1"

[profile.release]
opt-level = 3
strip = "symbols"
lto = true
codegen-units = 1
