[package]
name = "tester"
version = "0.2.0"
edition = "2021"

[dependencies]
# AES-128-GCM 认证加密
# C-01 FIX: 添加 getrandom feature 使 OsRng 可用
aes-gcm = { version = "0.10", features = ["aes", "getrandom"] }
sha2 = "0.10"
hmac = "0.12"

# HKDF 密钥派生 (M-01 FIX)
hkdf = "0.12"

# 编译期字符串混淆（防逆向找 SALT）
obfstr = "0.4"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端（全局单例，连接池复用）
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
] }

# 地理检测
# local-ip-address = "0.6"

# 错误处理 & 追踪
anyhow = "1"
tracing = "0.1"

# subtle = "2"
# M-04 FIX: 移除 async-recursion，改用 loop + flag

[profile.release]
opt-level = 3
strip = "symbols"
lto = true
codegen-units = 1