[package]
name = "v0"
version = "0.2.0"
edition = "2021"

[dependencies]
# ── Web 框架 ──────────────────────────────────────────────────────────────────
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }

# ── PostgreSQL 连接池 ──────────────────────────────────────────────────────────
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
] }

# ── Redis ───────────────────────────────────────────────────────────────────────
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = { version = "0.15", features = ["rt_tokio_1"] }

# ✅ OPT-MAJOR-4: 内存 nonce 降级（DashMap 线程安全哈希表）
dashmap = "5"

# UUID
uuid = { version = "1", features = ["v4"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sha2 = "0.10.8"
hex = "0.4"
hmac = "0.12.1"

#  ✅ OPT-A FIX: 真正常量时间比较
subtle = "2"

# 全局单例
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
